# bootnn

./: LICENSE  Makefile  README.md
docs/: INPUT_ABSTRACTION_LAYER.md  NON_DETERMINISM_ABSTRACTION_LAYER.md
ial/: Cargo.toml
ial/src/: ial_bare_metal.asm  lib.rs  pipeline.rs  quantizers.rs  types.rs
ial/tests/: integration.rs
legacy/: build_tier1.sh  dnos_tier1.asm  train_tier1.py
ndal/: Cargo.toml
ndal/src/: lib.rs  log.rs  oracles.rs  pipeline.rs  types.rs
ndal/tests/: integration.rs
src/: dnos.asm
tools/: train.py
